--- a/app/src/main/res/layout/detail_part3.xml
+++ b/app/src/main/res/layout/detail_part3.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
             android:gravity="center"
-            android:text="Overview"
+            android:text="@string/overview"
             android:textSize="20sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
